--- a/Evan-Lawin/style.css
+++ b/Evan-Lawin/style.css
@@ -94,6 +94,13 @@ main{
     clear: both;
     margin-bottom: 15px;
 }
+.author
+{
+
+    color: Blue;
+        text-decoration: none;
+     font-weight: bold;
+}
 .programming-lang {
 
     cursor: pointer;
@@ -102,6 +109,7 @@ main{
     font-size: 12px;
     border-radius: 1px;
     color: white;
+    border-radius: 5px ;
 }
 .green{
     background-color: rgb(115,183,101);
