--- a/Hameed-&-randa/hameed-Randa/style.css
+++ b/Hameed-&-randa/hameed-Randa/style.css
@@ -1,9 +1,7 @@
-
-
 aside {
-    align-content: flex-end;
+    
     position: fixed;
-    height: 100%;
+    height: 100vh;
     width: 250px;
     z-index: 1;
     top: 0;
@@ -13,19 +11,24 @@ aside {
     background-color: #3d4f5d;
 }
 
-aside > div {
-    padding: 6px 8px 6px 16px;
+.sidebar-content{
+
+    float: right;
+    text-align: right;
+    padding: 0px 16px 0px 10px;
     display: block;
     margin-top: 200px;
 }
 
-aside > div > h3 {
+
+
+aside  div  h3 {
     color: white;
     padding: 0 0 0 0;
     margin-bottom: 0;
 }
 
-aside > div > p {
+aside  div  p {
     color: #b0cadb;
     padding-top: 0;
     margin-top: 0;
@@ -36,15 +39,94 @@ aside > div > p {
     background-color: #3d4f5d; /* Green */
     border: 2px solid #b0cadb;
     color: white;
-    padding: 2px 2px;
+    padding: 5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 5px;
     cursor: pointer;
 }
 
 main {
-    margin-left: 250px;
+    margin-left: 270px;
+}
+
+.post-header{
+    color: lightgray;
+    font-size: small;
+    /* background-color: red; */
+    display: block;
+    border-bottom: solid 1px lightgray;
+    padding-bottom: 4px;
+    margin-top: 25px;
+}
+
+h2 {
+    font-size: xx-large;
+    margin-bottom: 0px;
+}
+
+.avatar {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    float: right;
+    margin-top: -44px;
+    margin-right: 25px;
+}
+
+.under-header{
+    color: gray;
+    margin-top: 0;
+    font-size: small;
+}
+
+p a {
+    text-decoration-line: none;
+    color: #2492ff;
+}
+
+.body-text {
+    color: #3d4f5d;
+    margin-right: 30px;
+}
+
+.green {
+    padding-right: 6px;
+    padding-left: 6px;
+    background-color:#00d900;
+    color: white;
+    font-size: medium;
+    text-align: center;
+}
+
+.red {
+    padding-right: 6px;
+    padding-left: 6px;
+
+    background-color:#ff2b2b;
+    color: white;
+    font-size: medium;
+    text-align: center;
+}
+.blue {
+    padding-right: 6px;
+    padding-left: 6px;
+    background-color:#0080ff;
+    color: white;
+    font-size: medium;
+    text-align: center;
+}
+
+.body-pics{
+    box-sizing: border-box;
+    width: 45%;    
+}
+
+.fotter {
+    color: lightgray;
+    position: absolute;
+    bottom: 60px;
+    left: 46%;
 }
