--- a/zeena-ahmad/style.css
+++ b/zeena-ahmad/style.css
@@ -5,7 +5,7 @@
     background-color: #334856;
     float: left;
     padding-top: 100px;
-    padding-bottom: 700px;
+    padding-bottom:100%;
    
     
   }
@@ -28,4 +28,56 @@
   
   aside p{
     color:#668FAA;
+  }
+  #img{
+    width:40px;
+    height: 40px;
+    border-radius: 50%;
+    float:right;
+    margin-top: -20px;
+
+  }
+  .one{
+    margin:25px 100px 0px 300px;
+    font-family:courier;
+   
+  }
+  #gray-p{
+    color:gray;
+
+  }
+  .sec1 a,.sec2 a,.sec3 a{
+    text-decoration: none;
+
+  }
+  .span1{
+   background:rgb(113, 165, 113);
+   padding:5px 5px 5px 5px;
+   color:white;
+  }
+  .span2{
+    background:rgba(32, 32, 179, 0.644);
+    padding:5px 5px 5px 5px;
+    color:white;
+  }
+
+  .span3{
+    background:rgb(224, 140, 196);
+    padding:5px 5px 5px 5px;
+    color:white;
+  }
+  .span4{
+    background:gray;
+    padding:5px 5px 5px 5px;
+    color:white;
+  }
+  .sec3 img{
+    width:400px;
+    height:400px;
+    margin:0px 20px 30px 0px;
+  }
+  .footer{
+    margin:0px 300px 0px 300px;
+   
+    color:gray;
   }
